back to work, commented out unused code until it compiles

--- a/README
+++ b/README
@@ -6,3 +6,9 @@ positrack is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
+
+To install, you will need 
+
+gstreamer-devel
+gstreamer-plugins-base-devel.x86_64
+libdc1394-devel
