--- a/README
+++ b/README
@@ -8,6 +8,9 @@ it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
+
+Kevin started branch k1 to do development
+
 Requirements:
 
 gtk2-devel
